# CHIPSIM

./: .gitignore  README.md  post_simulation_processor.py  run_simulation.py  simulate.py
AMD_run_scrips/: alexnet.csv  fused_bench_rcw_layers_omp  fused_bench_rcw_layers_omp.c  gen_fused_cmd.py  round_robin_expand.py  test1.sh
assets/DNN_models/: model_definitions.py
assets/NoI_topologies/: adj_matrix_10x10_floret.csv  adj_matrix_10x10_mesh.csv  adj_matrix_10x10_mesh_with_io.csv  adj_matrix_6x6_floret.csv  adj_matrix_86x86.csv  adj_matrix_9x9_floret.csv  anynet_file_86x86.txt  create_100_floret.py
assets/chiplet_specs/: chiplet_mapping_86.yaml  chiplet_params.py  mapping_100_accum_homogeneous.yaml  mapping_100_alternating_hetero.yaml  mapping_100_cmos_with_io.yaml  mapping_100_raella-accum_hetero.yaml  mapping_100_raella_homogeneous.yaml  mapping_100_sharedADC_homogeneous.yaml  mapping_100_standard_homogeneous.yaml  mapping_100_with_io.yaml  mapping_102_with_io.yaml
assets/workloads/: vit_fusion_1.csv  vit_fusion_10.csv  vit_fusion_2.csv  vit_fusion_20.csv  vit_fusion_40.csv  vit_fusion_5.csv  vit_fusion_80.csv  workload_0.001rate_100000us.csv  workload_0.05rate_100000us.csv  workload_0.1rate_1000us.csv  workload_0.1rate_50000us.csv  workload_0.1rate_5000us.csv  workload_1_0ms.csv  workload_1rate_100us.csv  workload_1rate_100us_10-10.csv  workload_1rate_10us.csv  workload_1rate_10us_10-10.csv  workload_1rate_15us.csv  workload_1rate_25us_10-10.csv  workload_1rate_25us_25-25.csv  workload_1rate_25us_50-50.csv  workload_1rate_50us_1-1.csv  workload_1rate_50us_10-10.csv  workload_1rate_50us_100-100.csv  workload_1rate_50us_2-2.csv  workload_1rate_50us_20-20.csv  workload_1rate_50us_25-25.csv  workload_1rate_50us_3-3.csv  workload_1rate_50us_30-30.csv  workload_1rate_50us_40-40.csv  workload_1rate_50us_5-5.csv  workload_1rate_50us_50-50.csv  workload_1rate_50us_7-7.csv  workload_2.csv  workload_3.csv  workload_4.csv  workload_5.csv  workload_6.csv  workload_7.csv  workload_alexnet.csv  (+12 more)
configs/cross_analysis/: compare_vit_inputs.yaml  example_comparison.yaml
configs/experiments/: config_1.yaml  config_2.yaml  config_3.yaml  config_4.yaml  debug_co_active_hang.yaml  vit_10_input.yaml  vit_1_input.yaml  vit_20_input.yaml  vit_2_input.yaml  vit_40_input.yaml  vit_5_input.yaml  (+1 more)
docs/: advanced-features.md  components.md  gem5-integration.md  helper-scripts.md  requirements.txt
helpers/: create_def_from_cimloop.py  create_new_model_def.py  fuse_vit_qkv.py  helpers_GenerateAdjMatrix.py  helpers_GenerateWorkload.py
integrations/: CIMLoop_API.py  __init__.py  dsent_runner.py
integrations/gem5/ext/dsent/: CMakeLists.txt  DSENT.cc  DSENT.h  interface.cc
integrations/gem5/ext/dsent/configs/: garnet_link.cfg  garnet_router.cfg
src/: __init__.py
(+547 files in other folders)
